--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <!-- Compiled and minified CSS -->
+
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
   </head>
   <body>
     <div id="root"></div>
